--- a/datastructures.ipynb
+++ b/datastructures.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linked List"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,44 +59,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Node() takes no arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m llist \u001b[38;5;241m=\u001b[39m LinkedList()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Insert 6. So the list becomes 6->None\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mllist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Insert 7 at the beginning. So linked list becomes 7->6->None\u001b[39;00m\n\u001b[0;32m      8\u001b[0m llist\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m7\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[2], line 27\u001b[0m, in \u001b[0;36mLinkedList.append\u001b[1;34m(self, new_data)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mappend\u001b[39m(\u001b[38;5;28mself\u001b[39m, new_data):\n\u001b[1;32m---> 27\u001b[0m     new_node \u001b[38;5;241m=\u001b[39m \u001b[43mNode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhead \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     29\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhead \u001b[38;5;241m=\u001b[39m new_node\n",
-      "\u001b[1;31mTypeError\u001b[0m: Node() takes no arguments"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3->4->2->5->6->\n"
      ]
     }
    ],
    "source": [
-    "# Create a new linked list\n",
+    "\n",
     "llist = LinkedList()\n",
     "\n",
-    "# Insert 6. So the list becomes 6->None\n",
+    "\n",
+    "llist.append(5)\n",
+    "\n",
+    "\n",
+    "llist.push(4)\n",
+    "\n",
+    "llist.push(3)\n",
+    "\n",
     "llist.append(6)\n",
     "\n",
-    "# Insert 7 at the beginning. So linked list becomes 7->6->None\n",
-    "llist.push(7)\n",
+    "llist.insertAfter(llist.head.next, 2)\n",
     "\n",
-    "# Insert 1 at the beginning. So linked list becomes 1->7->6->None\n",
-    "llist.push(1)\n",
-    "\n",
-    "# Insert 4 at the end. So linked list becomes 1->7->6->4->None\n",
-    "llist.append(4)\n",
-    "\n",
-    "# Insert 8, after 7. So linked list becomes 1->7->8->6->4->None\n",
-    "llist.insertAfter(llist.head.next, 8)\n",
-    "\n",
-    "# Print the linked list\n",
     "llist.printList()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Queue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tree\n",
+    "Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
